--- a/Northwind.Application/Views/Product/Details.cshtml
+++ b/Northwind.Application/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Northwind.Data.Entities.Product
+﻿@model Northwind.Application.Models.Product.ProductDetailsModel
 
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
