--- a/Northwind.Application/Views/Employee/Delete.cshtml
+++ b/Northwind.Application/Views/Employee/Delete.cshtml
@@ -1,50 +1,18 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Employee.EmployeeIndexModel>
-
 @{
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Employee";
+    ViewData["ActionName"] = "DeleteConfirmed";
+    ViewData["FormMethod"] = "post";
+    ViewData["Hidden"] = "hidden";
+
     var count = Model.Count();
-    ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
-
 <h3>Are you sure you want to delete @(count > 1 ? "these" : "this")</h3>
-<div>
-    <h4>@(count > 1 ? "Employees" : "Employee")?</h4>
-    <hr />
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.FullName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Photo)
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <form id="form" asp-action="DeleteConfirmed" method="post">
-                @foreach (var item in Model)
-                {
-                    <input asp-for="@item.EmployeeId" name="ids" type="hidden" />
-                    <tr>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.FullName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Title)
-                        </td>
-                        <td>
-                            <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
-                        </td>
-                    </tr>
-                }
-            </form>
-        </tbody>
-    </table>
-    <button form="form" class="btn btn-danger" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", "Employee")'">Back to List</button>
-</div>
+<h4>@(count > 1 ? "Employees" : "Employee")?</h4>
+<hr />
+
+@await Html.PartialAsync("_TableFormPartial")
+<button form="form" class="btn btn-danger float-end" type="submit">Delete</button>
