--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Northwind.Application.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/checkboxes.css" type="text/css" />
+    <link rel="stylesheet" href="~/css/details.css" type="text/css" />
 </head>
 <body>
     <header>
@@ -57,6 +59,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/checkboxes.js"></script>
+    <script src="~/js/fileSelection.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
