--- a/Northwind.Application/Views/Category/Edit.cshtml
+++ b/Northwind.Application/Views/Category/Edit.cshtml
@@ -36,10 +36,8 @@
             </div>
             <div style="padding-top:20px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-primary float-end fw-bold">Back to List</a>
+                <a asp-action="Details" asp-route-id="@Model.CategoryId" class="btn btn-primary float-end fw-bold">Back</a>
             </div>
         </form>
     </div>
 </div>
-
-<script src="~/js/fileSelection.js" />
