--- a/Northwind.Application/Views/Employee/Edit.cshtml
+++ b/Northwind.Application/Views/Employee/Edit.cshtml
@@ -98,10 +98,9 @@
             </div>
             <div style="padding-top:20px;">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Index" class="float-end fw-bold btn btn-primary">Back to List</a>
+                <a asp-action="Details" asp-route-id="@Model.EmployeeId" class="float-end fw-bold btn btn-primary">Back</a>
             </div>            
         </form>
     </div>
 </div>
 
-<script src="~/js/fileSelection.js" />
