--- a/Northwind.Application/Views/Product/Delete.cshtml
+++ b/Northwind.Application/Views/Product/Delete.cshtml
@@ -1,51 +1,18 @@
-﻿@model Northwind.Application.Models.Product.ProductForCategoryModel
-
+﻿@model IEnumerable<Northwind.Application.Models.Product.ProductIndexModel>
 @{
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
+    ViewData["ControllerName"] = "Product";
+    ViewData["ActionName"] = "DeleteConfirmed";
+    ViewData["FormMethod"] = "post";
+    ViewData["Hidden"] = "hidden";
+
     var count = Model.Count();
-    ViewData["Title"] = "Delete";
 }
 
 <h1>Delete</h1>
-
 <h3>Are you sure you want to delete @(count > 1 ? "these" : "this")</h3>
-<div>
-    <h4>@(count > 1 ? "Products" : "Product")?</h4>
+<h4>@(count > 1 ? "Products" : "Product")?</h4>
+<hr />
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    Product Name
-                </th>
-                <th>
-                    Quantity Per Unit
-                </th>
-                <th>
-                    Unit Price, $
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <form id="form" asp-action="DeleteConfirmed" method="post">
-                @foreach (var item in Model)
-                {
-                    <input asp-for="@item.ProductId" name="ids" type="hidden" />
-                    <tr>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.ProductName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QuantityPerUnit)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.UnitPrice)
-                        </td>
-                    </tr>
-                }                
-            </form>
-        </tbody>
-    </table>
-
-    <button class="btn btn-danger" form="form" type="submit">Delete</button>
-    <button class="btn btn-primary float-end" onclick="location.href = '@Url.ActionLink("Index", $"Product", new { categoryId = Model.Products!.First().CategoryId })'">Back to List</button>
-</div>
+@await Html.PartialAsync("_TableFormPartial")
+<button form="form" class="btn btn-danger float-end" type="submit">Delete</button>
