Developed EditPartial View

--- a/Northwind.Application/Views/Employee/Details.cshtml
+++ b/Northwind.Application/Views/Employee/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Northwind.Data.Entities.Employee
+﻿@model Northwind.Application.Models.Employee.EmployeeDetailsModel
 
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
