--- a/Northwind.Application/Views/Category/Edit.cshtml
+++ b/Northwind.Application/Views/Category/Edit.cshtml
@@ -1,43 +1,10 @@
 ﻿@model Northwind.Application.Models.Category.CategoryEditModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["ControllerName"] = "Category";
 }
 
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
-
 <h1>Edit</h1>
-
 <h4>Category</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CategoryId" />
-            <input type="hidden" asp-for="Picture" />
-            <label class="control-label">Picture</label>
-            <div class="form-group">
-                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" onclick="onImageClickHandler()" style="cursor:pointer" />
-                <label style="position:relative;">Change image...</label>
-                <input id="fileInput" asp-for="FormFile" class="form-control" onchange="previewFile(this)" style="display:none" />
-                <span asp-validation-for="FormFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryName" class="control-label"></label>
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <textarea asp-for="Description" class="form-control"></textarea>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div style="padding-top:20px;">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Details" asp-route-id="@Model.CategoryId" class="btn btn-primary float-end fw-bold">Back</a>
-            </div>
-        </form>
-    </div>
-</div>
+
+@await Html.PartialAsync("_EditFormPartial", Model)
