Developed Create Partial View

--- a/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
+++ b/Northwind.Application/Views/Shared/_CreateFormPartial.cshtml
@@ -5,40 +5,26 @@
 @using Northwind.Bll.Services.Extensions
 @model object
 
-@{
-    var idName = Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).Name;
-}
-
 @functions {
-    string ControllerName => ViewData["ControllerName"].ToString().SplitForUpperCase(Model);
     PropertyInfo[] Properties => Model.GetType().GetProperties();
-    PropertyInfo[] Ids => Properties.Where(x => x.Name.Contains("Id")).ToArray();
-    int IdValue => (int)(Properties.First(x => x.Name.Contains(ControllerName) && x.Name.Contains("Id")).GetValue(Model) ?? 0);
     string Disabled => User.IsInRole("admin") ? "" : "disabled";
     PropertyInfo FormFileProperty => Properties.FirstOrDefault(x => x.GetValue(Model) is IFormFile);
     string? FormFile => FormFileProperty == null ? null : FormFileProperty.Name;
-    PropertyInfo Image => Properties.FirstOrDefault(x => (x.Name.Contains("Image") || x.Name.Contains("Picture") || x.Name.Contains("Photo")) && x.GetValue(Model) is byte[]);
+    PropertyInfo Image => Properties.FirstOrDefault(x => (x.Name.Contains("Image") || x.Name.Contains("Picture") || x.Name.Contains("Photo")) && x.PropertyType.FullName.Contains("Byte"));
     PropertyInfo[] SelectLists => Properties.Where(x => x.PropertyType.FullName.Contains("SelectList")).ToArray();
     PropertyInfo[] ForeignKeys => Properties.Where(x => x.PropertyType.FullName.Contains("Int") && SelectLists.Any(y => y.Name.Contains(x.Name))).ToArray();
 }
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit" enctype="multipart/form-data">
+        <form asp-action="Create" id="form" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            @foreach (var id in Ids)
-            {
-                <input type="hidden" name="@id.Name" value="@id.GetValue(Model)" />
-            }
-
             @{
                 if (Image != null)
                 {
                     var imageValue = Image.GetValue(Model) as byte[];
 
                     <label class="control-label">@Image.Name</label>
-                    @await Html.PartialAsync("_ImageInputPartial", Model)
 
                     <div class="form-group">
                         <img id="image" src="data:image/jpg;base64,@Convert.ToBase64String(
@@ -48,39 +34,29 @@
                 }
             }
 
-            @foreach (var item in Properties.Where(x => !x.Name.Contains("Id") && !(x.GetValue(Model) is byte[])))
+            @foreach (var item in Properties.Where(x => !(x.GetValue(Model) is byte[])))
             {
-                var value = item.GetValue(Model);
                 var type = item.PropertyType.FullName;
 
                 <div class="form-group">
                     @if (type.Contains("DateTime"))
                     {
-                        var date = (DateTime)value;
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
-                        <input name="@item.Name" value=@($"{date.Year:D4}-{date.Month:D2}-{date.Day:D2}") type="date" class="form-control" />
+                        <input name="@item.Name" type="date" class="form-control" />
                     }
 
                     @if (type.Contains("String"))
                     {
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
-
-                        if (value != null && (value as string).Length > 100)
-                        {
-                            <textarea name="@item.Name" class="form-control">@value</textarea>
-                        }
-                        else
-                        {
-                            <input value="@item.GetValue(Model)" name="@item.Name" class="form-control" />
-                        }
+                        <input name="@item.Name" class="form-control" />
                     }
 
-                    @if (type.Contains("SelectList") && value != null)
+                    @if (type.Contains("SelectList"))
                     {
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
 
                         <select class="form-select" name="@item.Name[..^4]">
-                            @foreach (var option in value as SelectList)
+                            @foreach (var option in item.GetValue(Model) as SelectList)
                             {
                                 if (option.Selected)
                                 {
@@ -97,19 +73,19 @@
                     @if (type.Contains("Int") && !ForeignKeys.Any(x => x.Name.Contains(item.Name)))
                     {
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
-                        <input type="number" name="@item.Name" value="@value" class="form-control" />
+                        <input type="number" name="@item.Name" class="form-control" />
                     }
 
                     @if (type.Contains("Decimal"))
                     {
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
-                        <input type="text" name="@item.Name" value="@value" class="form-control" />
+                        <input type="text" name="@item.Name" class="form-control" />
                     }
 
                     @if (type.Contains("Bool"))
                     {
                         <label class="control-label">@item.Name.SplitForUpperCase()</label>
-                        <input class="form-check-input" type="checkbox" value="true" name="@item.Name" @((bool)value ? "checked" : "") />
+                        <input class="form-check-input" type="checkbox" name="@item.Name" />
                     }
 
                     @if (type.Contains("IFormFile"))
@@ -120,11 +96,15 @@
                     <span asp-validation-for="@item.Name" class="text-danger"></span>
                 </div>
             }
-
-            <div style="padding-top:20px;">
-                <input type="submit" value="Save" class="btn btn-primary fw-bold" />
-                <a asp-action="Details" asp-route-id="@IdValue" class="float-end fw-bold btn btn-primary">Back</a>
-            </div>
         </form>
     </div>
+</div>
+
+<div style="padding-top:20px;">
+    <input type="submit" form="form" value="Create" class="btn btn-primary fw-bold" />
+
+    @if (ViewData["PreviousPage"] != null)
+    {
+        <button class="btn btn-primary fw-bold float-end" onclick="location.href = '@ViewData["PreviousPage"]'">Back</button>
+    }
 </div>
