--- a/Northwind.Application/Views/Category/Create.cshtml
+++ b/Northwind.Application/Views/Category/Create.cshtml
@@ -1,65 +1,12 @@
 ﻿@model Northwind.Application.Models.Category.CategoryCreateModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["ControllerName"] = "Category";
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
 }
-
-@functions{
-    byte[] GetDefaultPicture()
-    {
-        var result = new byte[0];
-
-        try
-        {
-            result = File.ReadAllBytes("wwwroot/pics/AddPicture.gif");
-        }
-        catch (DirectoryNotFoundException ex)
-        {
-            Console.WriteLine(ex.Message);
-        }
-        catch (FileNotFoundException ex)
-        {
-            Console.WriteLine(ex.Message);
-        }
-
-        return result;
-    }
-}
-
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
 
 <h1>Create</h1>
 
 <h4>Category</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form id="form" asp-action="Create" enctype="multipart/form-data">           
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <label class="control-label">Picture</label>
-            <div class="form-group">                
-                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model == null || Model.Picture == null ? GetDefaultPicture() : Model.Picture!)" onclick="onImageClickHandler()" style="cursor:pointer" />
-                <input id="fileInput" asp-for="FormFile" class="form-control" onchange="previewFile(this)" style="display:none"/>
-                <span asp-validation-for="FormFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryName" class="control-label"></label>
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-        </form>
-        <div style="padding-top:20px;">
-            <input form="form" type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-primary float-end">Back to List</a>
-        </div>
-    </div>
-</div>
 
-<script src="~/js/fileSelection.js"></script>
-
+@await Html.PartialAsync("_CreateFormPartial", Model)
