--- a/Northwind.Application/Views/Employee/Create.cshtml
+++ b/Northwind.Application/Views/Employee/Create.cshtml
@@ -1,123 +1,12 @@
 ﻿@model Northwind.Application.Models.Employee.EmployeeCreateModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["ControllerName"] = "Employee";
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
 }
-
-@functions {
-    byte[] GetDefaultPicture()
-    {
-        var result = new byte[0];
-
-        try
-        {
-            result = File.ReadAllBytes("wwwroot/pics/AddPicture.gif");
-        }
-        catch (DirectoryNotFoundException ex)
-        {
-            Console.WriteLine(ex.Message);
-        }
-        catch (FileNotFoundException ex)
-        {
-            Console.WriteLine(ex.Message);
-        }
-
-        return result;
-    }
-}
-
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
 
 <h1>Create</h1>
 
 <h4>Employee</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form id="form" asp-action="Create" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <label class="control-label">Picture</label>
-            <div class="form-group">
-                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model == null || Model.Photo == null ? GetDefaultPicture() : Model.Photo!)" onclick="onImageClickHandler()" style="cursor:pointer" />
-                <input id="fileInput" asp-for="FormFile" class="form-control" style="display:none;" onchange="previewFile(this)"/>
-                <span asp-validation-for="FormFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control"/>
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>            
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TitleOfCourtesy" class="control-label"></label>
-                <input asp-for="TitleOfCourtesy" class="form-control" />
-                <span asp-validation-for="TitleOfCourtesy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" />
-                <span asp-validation-for="BirthDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HireDate" class="control-label"></label>
-                <input asp-for="HireDate" class="form-control" />
-                <span asp-validation-for="HireDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
-                <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Region" class="control-label"></label>
-                <input asp-for="Region" class="form-control" />
-                <span asp-validation-for="Region" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PostalCode" class="control-label"></label>
-                <input asp-for="PostalCode" class="form-control" />
-                <span asp-validation-for="PostalCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
-                <input asp-for="Country" class="form-control" />
-                <span asp-validation-for="Country" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HomePhone" class="control-label"></label>
-                <input asp-for="HomePhone" class="form-control" />
-                <span asp-validation-for="HomePhone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Notes" class="control-label"></label>
-                <textarea asp-for="Notes" class="form-control"></textarea>
-                <span asp-validation-for="Notes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReportsTo" class="control-label"></label>
-                <select asp-for="ReportsTo" class ="form-control" asp-items="ViewBag.ReportsTo"></select>
-            </div>
-        </form>
-        <div style="padding-top:20px;">
-            <input form="form" type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" class="btn btn-primary float-end">Back to List</a>
-        </div>
-    </div>
-</div>
 
-<script src="~/js/fileSelection.js"></script>
+@await Html.PartialAsync("_CreateFormPartial", Model)
