--- a/Northwind.Application/Views/Product/Create.cshtml
+++ b/Northwind.Application/Views/Product/Create.cshtml
@@ -1,43 +1,12 @@
 ﻿@model Northwind.Application.Models.Product.ProductCreateModel
-
 @{
-    ViewData["Title"] = "Create";
+    ViewData["ControllerName"] = "Product";
+    ViewData["PreviousPage"] = ViewBag.PreviousPage;
 }
-
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
 
 <h1>Create</h1>
 
 <h4>Product</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form id="form" asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Category</label>
-                <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryIds"></select>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Supplier</label>
-                <select asp-for="SupplierId" class="form-select" asp-items="ViewBag.SupplierIds"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuantityPerUnit" class="control-label"></label>
-                <input asp-for="QuantityPerUnit" class="form-control" />
-                <span asp-validation-for="QuantityPerUnit" class="text-danger"></span>
-            </div>
-        </form>
-        <div style="padding-top:20px;">
-            <input form="form" type="submit" value="Create" class="btn btn-primary" />
-            <a asp-action="Index" asp-route-categoryId="@((int)ViewBag.CategoryId)" class="btn btn-primary float-end">Back to List</a>
-        </div>
-    </div>
-</div>
+
+@await Html.PartialAsync("_CreateFormPartial", Model)
