--- a/Northwind.Application/Views/Product/Edit.cshtml
+++ b/Northwind.Application/Views/Product/Edit.cshtml
@@ -1,62 +1,10 @@
 ﻿@model Northwind.Application.Models.Product.ProductEditModel
-
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["ControllerName"] = "Product";
 }
 
-<head>
-    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
-</head>
-
 <h1>Edit</h1>
-
 <h4>Product</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ProductId" />
-            <input type="hidden" asp-for="CategoryId" />
-            <div class="form-group">
-                <label asp-for="ProductName" class="control-label"></label>
-                <input asp-for="ProductName" class="form-control" />
-                <span asp-validation-for="ProductName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Supplier</label>
-                <select asp-for="SupplierId" class="form-select" asp-items="ViewBag.SupplierIds"></select>
-                <span asp-validation-for="SupplierId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Category</label>
-                <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.CategoryIds"></select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuantityPerUnit" class="control-label"></label>
-                <input asp-for="QuantityPerUnit" class="form-control" />
-                <span asp-validation-for="QuantityPerUnit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UnitPrice" class="control-label"></label>
-                <input asp-for="UnitPrice" class="form-control" />
-                <span asp-validation-for="UnitPrice" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UnitsInStock" class="control-label"></label>
-                <input asp-for="UnitsInStock" class="form-control" />
-                <span asp-validation-for="UnitsInStock" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Discontinued" /> @Html.DisplayNameFor(model => model.Discontinued)
-                </label>
-            </div>
-            <div style="padding-top:20px;">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Details" asp-route-id="@Model.ProductId" class="btn btn-primary float-end">Back</a>
-            </div>
-        </form>
-    </div>
-</div>
+
+@await Html.PartialAsync("_EditFormPartial", Model)
