Developed logics for validation span tags rendering

--- a/Northwind.Application/Views/Category/Details.cshtml
+++ b/Northwind.Application/Views/Category/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Northwind.Data.Entities.Category
+﻿@model Northwind.Application.Models.Category.CategoryDetailsModel
 
 @{
     ViewData["PreviousPage"] = ViewBag.PreviousPage;
